# bitlume-wallet

./: Cargo.toml  README.md  canister_ids.json  dfx.json  lib.rs  mops.toml  package-lock.json  package.json
backend_inference/: .gitignore  Dockerfile  docker-compose.yaml  main.py  requirements.txt  xgverifyv3.py
src/analysis/: Cargo.toml  analysis.did
src/analysis/src/: lib.rs
src/backend/: main.mo
src/bitcoin/src/: Main.mo
src/bitlume-wallet-frontend/: package.json
src/bitlume-wallet-frontend/src/: App.jsx
src/frontend/: index.html  package-lock.json  vite.config.js
src/frontend/src/: main.jsx
src/frontend/src/core/components/auth/: auth-guard.jsx
src/frontend/src/core/components/ui/: button.jsx
src/frontend/src/core/lib/: utils.js
src/frontend/src/core/providers/: auth-provider.jsx
src/frontend/src/pages/: dashboard.jsx  home-page.jsx
src/frontend/src/pages/SEO/: unauthorize-page.jsx
src/frontend/src/pages/components/: home-page-hero.jsx
src/frontend/src/pages/components/modals/: logout-modal.jsx  send-modal.jsx
src/ransomware_analysis/: lib.rs  ransomware_model.onnx
